# txtpp

./: CMakeLists.txt
chapter/1/: CMakeLists.txt  classifier_sample.cpp  preliminaries.md
chapter/2/: CMakeLists.txt  stemming_example.cpp  text_to_vectors.md  tokenisation_example.cpp
src/: basics_imp.cpp  simple_rule.cpp
